# xiaofinance

./: .env.example  .gitignore  .mcp.json  LICENSE  PLAN.md  README.md  pyproject.toml
.codex/: config.toml
app/: analyze.py  config.py  crawler_runner.py  db.py  dedup.py  keywords.py  main.py  mcp_server.py  mentions.py  migrations.py  pipeline.py  prices.py  probe.py  scoreboard.py  scoring.py  slang_scan.py  util.py
docs/: account-safety.md  agent-analyst.md  faq.md  how-it-works.md  install.md  troubleshooting.md  upgrade.md
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
infinance/: analyze.py  browser_lock.py  cli.py  config.py  doctor.py  guardrails.py  ingest.py  jobs.py  keywords.py  main.py  mcp_server.py  migrations.py  pipeline.py  prices.py  probe.py  scoreboard.py  scoring.py  session.py  slang_scan.py  util.py
roadmap/: README.md  executive_summary.md  feature_roadmap.md  product_analysis.md  technical_architecture.md
scripts/: login_xhs.ps1  setup.ps1  smoke_crawl.ps1
static/: app.js  index.html  package-lock.json  style.css
tests/: conftest.py  test_analyze_noise.py  test_analyze_threads.py  test_analyze_tokens.py  test_api.py  test_aside_weight.py  test_browser_lock.py  test_cleanup.py  test_cli_browser_busy.py  test_cooldown.py  test_crawl_auth.py  test_crawl_diagnostics.py  test_crawler_patch.py  test_db.py  test_dedup.py  test_excerpt.py  test_fetch_loop.py  test_gather_items.py  test_guardrails.py  test_index_board.py  test_ingest.py  test_investment_signals.py  test_jobs.py  test_keywords.py  test_login_detect.py  test_mcp_server.py  test_mentions.py  test_migrations.py  test_prices.py  test_prompt.py  test_provider_contract.py  test_quote_verify.py  test_scoreboard.py  (+13 more)
(+31 files in other folders)
