[project]
name = "infinance"
version = "0.1.0"
description = "XHS (Xiaohongshu) US-stock sentiment dashboard — local, personal, your own account"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "apscheduler>=3.10,<4",
    "openai>=1.40",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "psutil>=5.9",
    "platformdirs>=4",
    "mcp>=1.2",
]

[project.scripts]
infinance = "infinance.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["infinance"]
# webui is gitignored (vite build output) but must ship in the wheel;
# `artifacts` re-includes VCS-ignored files.
artifacts = ["infinance/webui/**"]

[dependency-groups]
dev = [
    "pytest>=8",
    "httpx>=0.27",
    "ruff>=0.6",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
# E501: long lines are fine at 110 with CJK strings; B008: FastAPI's designed
# idiom is Body(...)/Depends(...) calls in parameter defaults.
ignore = ["E501", "B008"]
